Fixed z-index on image so See All Organisations link is clickable beneath it. Deleted old styles for contents menu.

--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -225,6 +225,7 @@ header {
       right: 138px;
       top: 258px;
       opacity: 0.3;
+      z-index: -1;
     }
   }
 
@@ -506,11 +507,6 @@ form.search {
 
   li {
     padding: 0.5rem 0;
-
-    a {
-      border-bottom: #{$colour-main} 1px solid;
-      text-decoration: none;
-    }
   }
 }
 
@@ -587,8 +583,5 @@ form.search {
 }
 
 .contents {
-  position: absolute;
-  top: 400px;
-  left: 12rem;
   background-color: white;
 }
